--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -33,10 +33,10 @@
             <div class="content-card-title content-card-title--article p-2">
               <a class="content-card-title-link" [routerLink]="['/article', trend._id]">{{trend.name}}</a>
             </div>
-            <div class="content-card-author">
+            <!-- <div class="content-card-author">
               <div>Door: <span style="color: darkgrey;">{{trend?.contributor[0]?.name}}</span></div>
               <div><span style="color: darkgrey;">{{trend?.contributor[0]?.title}}</span></div>
-            </div>
+            </div> -->
           </div>
         </div>
 
@@ -107,10 +107,10 @@
           <div class="content-card-title content-card-title--article p-2">
             <a class="content-card-title-link" [routerLink]="['/article', article._id]">{{article.name}}</a>
           </div>
-          <div class="content-card-author">
+          <!-- <div class="content-card-author">
             <div>Door: <span style="color: darkgrey;">{{article?.contributor[0]?.name}}</span></div>
             <div><span style="color: darkgrey;">{{article?.contributor[0]?.title}}</span></div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
