--- a/src/app/create-article/create-article.component.html
+++ b/src/app/create-article/create-article.component.html
@@ -27,6 +27,10 @@
           <label for="exampleInputEmail1">Contributor Title</label>
           <input type="text" [(ngModel)]="contributorTitle" class="create-lesson-title form-control" aria-label="titel" aria-describedby="inputGroup-sizing-lg" style="background-color: #fbfbfd;">
         </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">image source:</label>
+          <!-- <input type="text" formControlName="imgSource" class="create-lesson-title form-control" aria-label="titel" aria-describedby="inputGroup-sizing-lg" style="background-color: #fbfbfd;"> -->
+        </div>
         <div class="button">
           <i class="icon-file far fa-image"></i>
           <input class="input-file" type="file" name="file" (change)="onFileChanged($event)">
