--- a/src/app/course-overview/course-overview.component.html
+++ b/src/app/course-overview/course-overview.component.html
@@ -1,10 +1,10 @@
 <div class="user-courses-navbar">      
-  <div class="user-courses-navbar navbar navbar-fixed-top bg-info">    
-    <div class="navbar-brand text-white">
+  <div class="user-courses-navbar navbar navbar-fixed-top" style="border-bottom: 1px solid #e0e0e0;">    
+    <div class="navbar-brand ml-auto mr-auto" style="color: #8A0912;">
       happy plate academy
     </div>
     <div class="navbar-right">
-      <a class="create pr-3" routerLink='/blog'>blog</a>
+      <a class="create pr-3 text-danger" routerLink='/blog'>blog</a>
       <a class="create pr-3" routerLink='/editor'>editor</a>
       <!-- <a class="create pr-3" routerLink='/create-lesson'>creeër les</a>       -->
     </div>    
