--- a/src/app/edit-lesson/edit-lesson.component.html
+++ b/src/app/edit-lesson/edit-lesson.component.html
@@ -16,8 +16,24 @@
           </div>
         </div>
       </div>      
-      <div class="col-12 col-md-8">        
-        <div class="py-3">
+      <div class="col-12 col-md-8">    
+          <quill-editor [(ngModel)]="tekst"
+          placeholder="Enter Text"
+          [modules]="quillConfig"
+          style="height: 80vh"> <!--(onSelectionChanged)="onSelectionChanged($event)" (onContentChanged)="onContentChanged($event)"-->
+        </quill-editor>
+  <!-- <div class="">
+          <div #el1 class="col-12 textEditor-textArea" [innerHTML]="tekst" (blur)="onBlur(el1.innerHTML)" contenteditable="true" style="overflow-y: scroll" placeholder="Type hier de inhoud van de les..."></div> 
+        </div>    -->
+        <div class="row py-3">
+          <a class="btn btn-info" (click)="save()" style="color: white;">Save</a>      
+          <span *ngIf="last_saved != '' && last_saved != null" class="px-5 pt-3">Last saved: {{last_saved}}</span>
+        </div>
+      </div>
+    </div> 
+  <div>
+</div>    
+        <!-- <div class="py-3">
           <div class="container textEditor">
             <div class="row justify-content-center">
               <div class="textEditor-controls">
@@ -76,15 +92,4 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="">
-          <div #el1 class="col-12 textEditor-textArea" [innerHTML]="tekst" (blur)="onBlur(el1.innerHTML)" contenteditable="true" style="overflow-y: scroll" placeholder="Type hier de inhoud van de les..."></div>      <!---->
-        </div>   
-        <div class="row py-3">
-          <a class="btn btn-info" (click)="save()" style="color: white;">Save</a>      
-          <span *ngIf="last_saved != '' && last_saved != null" class="px-5 pt-3">Last saved: {{last_saved}}</span>
-        </div>
-      </div>
-    </div> 
-  <div>
-</div>
+        </div> -->
