--- a/src/app/blog-navbar/blog-navbar.component.html
+++ b/src/app/blog-navbar/blog-navbar.component.html
@@ -14,17 +14,17 @@
   <div class="container upper-menu-container" [style.padding.rem]="blnNarrow ? '0' : '1'">
     <div class="row p-0">
       <div class="col-12 upper-menu">
-        <ul class="upper-menu-list p-0 m-0">
-          <li class="upper-menu-list-item">
+        <ul class="d-block d-md-flex upper-menu-list p-0 m-0">
+          <li class="d-block d-md-inline-block upper-menu-list-item">
             <a routerLink="/recipes">gezonder recepten</a>            
           </li>
-          <li class="upper-menu-list-item">
+          <li class="d-block d-md-inline-block upper-menu-list-item">
             <a routerLink="/articles">artikels</a>
           </li>
-          <li class="upper-menu-list-item">
+          <li class="d-block d-md-inline-block upper-menu-list-item">
             <a routerLink="/courses">happy plate academy</a>
           </li>
-          <li class="upper-menu-list-item">
+          <li class="d-block d-md-inline-block upper-menu-list-item">
             <a routerLink="/community">Community</a>
           </li>          
         </ul>
