--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -38,7 +38,7 @@ and (orientation: portrait){
 
 .background-fill{
     position: relative;
-    min-height: 60vh;
+    /* min-height: 60vh; */
     max-width: 1440px;    
     left: 0;    
 }
@@ -46,16 +46,20 @@ and (orientation: portrait){
 @media only screen
 and (max-width: 812px)
 and (orientation: portrait){
+    .background-1{
+        background-image: none;
+    }
+
     .background-fill{
-        top: 60px;
+        /* top: 60px; */
     }
 
 }
 
 .wrapper{
-    position: absolute;    
-    bottom: 8%;
-    left: 10%;
+    position: absolute;
+    height: 350px;    
+    top: 15%;    
     text-shadow: 1px 1px 1px rgba(0,0,0,.004);
 }
 
@@ -65,6 +69,85 @@ and (orientation: portrait){
 
 .wrapper-link:hover{
     color: orangered;
+}
+
+.highlight-card-image{
+    z-index: 2;
+    cursor: pointer;
+    /* width: 180px; */
+    height: 100%;    
+    background-color: lightgrey; /* fallback color */    
+    background-position: center;
+    background-size: cover;   
+    transition: all .5s;
+}
+
+.small-card-post-image{
+    transition: all .5s;
+}
+
+.highlight-article-container:hover .small-card-post-image{
+    transform: scale(1.2)
+}
+
+.highlight-card-big:hover .highlight-card-image{
+    transform: scale(1.2)
+}
+
+.scpc-header:hover{
+    text-decoration: underline;
+}
+
+.highlight-card-big:hover .recipe-card-info-title{
+    text-decoration: underline;
+}
+
+.recipe-card-rotd{
+    background-color: orangered;
+    color: #fff;
+    font-style: normal;
+    padding: 10px 15px;
+    position: absolute;
+    text-transform: uppercase;
+    top: 20px;
+}
+
+.recipe-card-info{
+    bottom: 0px;
+    position: absolute;
+    width: 100%; 
+    background: rgba(0,0,0,0.45)    
+}
+
+.recipe-card-info-title{
+    position: relative;
+    z-index: 0;
+    margin: 0;
+    font-size: 34px;
+    line-height: 25px;
+    text-decoration: none;
+    outline: 0;
+    cursor: pointer;    
+    color: white;
+    opacity: 1;    
+}
+
+.scpc-header{
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+}
+
+.scpc-info{
+    position: absolute;
+    bottom: 5px;
+}
+
+.scpc-info-datetime, .scpc-info-author{
+    color: rgba(0,0,0,.54)!important;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 400;
 }
 
 .header-data h1{
@@ -164,4 +247,17 @@ and (orientation: portrait){
 
 .content-card-data{
     font-size: 12px;
+}
+
+.button{
+    width: auto!important;
+    color: #fff;
+    letter-spacing: 2px;
+    background-color: orangered;
+    padding: 10px 20px!important;
+    border-width: 0!important;
+    border-color: #000;
+    border-radius: 6px!important;
+    -moz-border-radius: 6px!important;
+    -webkit-border-radius: 6px!important;
 }
