--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,26 +1,47 @@
 <blog-navbar></blog-navbar>
 <section class="container-fluid background-cover background-1 background-fill">
-  <div class="container wrapper">
-    <div class="row">
-      <div class="col-12 col-md-6 wrapper-column" style="">
-        <div class="header-info-bg" style=""></div>
-        <a routerLink='' class="wrapper-link">
-          <div class="header-data" style="position: absolute; bottom: 50px;">
-            <h1>Jouw persoonlijke maaltijd</h1>
-            <h4>speciaal ontwikkeld voor jouw door onze gediplomeerde voedingsdeskundigen</h4>            
+  <div class="container" style="" style="">
+    <div class="row m-0" style="height: 100%;">
+      <div class="highlight-card-big col-12 col-md-6 p-0 m-0" style="height: 350px">
+        <div [routerLink]="['/recipe',highlights[0]?.recipes[0]?._id]" class="h-100" style="overflow: hidden;">
+          <div class="highlight-card-image h-100" [style.background-image]="'url(' + highlights[0]?.recipes[0]?.images[0]?.source + ')'"></div>
+          <div class="recipe-card-rotd" style="">Recept van de dag</div>
+          <a  style="height: 100%; width: 100%; "></a>
+          <div class="recipe-card-info mt-4 p-3">
+            <div class="recipe-card-info-title py-4">{{highlights[0]?.recipes[0]?.name}}</div>
+            <span *ngFor="let badge of highlights[0]?.recipes[0]?.tags| slice:0:4" class="badge badge-light mr-1 mb-1 p-2" style="font-weight: 300;">{{badge}}</span>
+            <span *ngIf="highlights[0]?.recipes[0]?.tags.length > 4" class="badge badge-light mr-1 mb-1 p-2" style="font-weight: 300;">+</span>
+          </div>          
+        </div>
+      </div>
+      <div class="col-12 col-md-6 p-0 px-md-3">
+        <article *ngFor="let article of highlights[0]?.articles" class="highlight-article-container ml-0 ml-md-3" style="background-color: white; cursor:pointer;">
+          <div class="small-card-post-content d-flex mb-3" style="">
+            <div style="width: 100px; height: 100px; overflow: hidden;">
+              <div class="small-card-post-image d-inline-block" [style.background-image]="'url(' + article.files[0]?.source + ')'" style="width: 100px; height: 100px; background-position: center; background-size: cover; overflow: hidden;">
+                <a class="" style="background-color:crimson; width: 100px; height: 100px; margin-right: 24px;"></a>
+              </div>            
+            </div>
+            <div class="small-card-post-info d-inline-block pl-3" style="position: relative; width: calc(100% - 100px); min-width: 0;">              
+                <h2 [routerLink]="['/article',article._id]" class="scpc-header py-1">{{article.name}}</h2>
+                <div class="scpc-info">
+                  <div class="scpc-info-author">{{article.contributor.name}}</div>
+                  <div class="scpc-info-datetime">{{article.datePublished_str}} <i class="fas fa-circle" style="font-size: 4px; vertical-align: middle;"></i> {{article.timeToRead}} leestijd</div>
+                </div>              
+            </div>
           </div>
-        </a>
+        </article>
       </div>
     </div>
   </div>
 </section>
 <section class="container-fluid py-5" style="">
   <div class="container trending-container" style="padding: 0; border-bottom: 2px solid #f2f2f2;">
-    <div class="row trending-content pt-5" style="padding: 0;">
+    <div class="row trending-content pt-0 m-0" style="padding: 0;">
       <div class="col-12 recipes-container-header">
         <h2 class="font-weight-light">Trending</h2>
       </div>
-      <div *ngFor="let trend of trending | slice:0:3" class="col-6 col-sm-6 col-md-3 pb-5 px-2 content-container-card">
+      <div *ngFor="let trend of trending | slice:0:3" class="col-12 col-sm-6 col-md-3 pb-5 px-2 content-container-card">
         
         <!-- ARTICLE -->
         <div *ngIf="trend.type == 1">
@@ -42,63 +63,25 @@
 
         <!-- RECIPE -->
         <div *ngIf="trend.type == 2">
-          <recipe-widget [recipe]="trend"></recipe-widget>
-          <!-- <div class="content-card m-1">
-            <div class="content-card-image-container">            
-              <div [routerLink]="['/recipe', trend._id]" class="content-card-image" [style.background-image]="'url(' + trend?.images[0]?.source + ')'">
-                <a  style="height: 100%; width: 100%; "></a>
-              </div>
-            </div>
-            <div class="content-card-title content-card-title--recipe p-2">
-              <a class="content-card-title-link" [routerLink]="['/recipe', trend._id]">{{trend.name}}</a>
-            </div>
-            <div class="row m-0 text-center content-card-data" style="border-top: 1px solid #e0e0e0;">
-              <div class="time col-4 p-1" style="border-right: 1px solid #e0e0e0">
-                <div><strong>tijd</strong></div>
-                <div>{{trend.time_spend.totalTime}}</div>
-              </div>
-              <div class="healthy col-4 p-1" style="border-right: 1px solid #e0e0e0">
-                <div><strong>Gezond</strong></div>
-                <div>{{trend.health_index}}</div>
-              </div>
-              <div class="difficutly col-4 p-1">
-                <div><strong>moeilijkheid</strong></div>
-                <div>{{trend.difficulty_index}}</div>
-              </div>
-            </div>
-          </div> -->
+          <recipe-widget [recipe]="trend"></recipe-widget>          
         </div>
-
-        <!-- <div class="content-card m-1 mb-5" style="">
-          <div class="content-card-image-container">
-            <div class="content-card-image">
-              <a routerLink=""></a>
-            </div>
-          </div>
-          <div class="content-card-title">
-            <a>{{trend.name}}</a>
-          </div>
-          <div class="content-card-author">
-            <div>Door: <span style="color: darkgrey;">Tom Balcaen</span></div>
-            <div><span style="color: darkgrey;">happy plate bijdrager</span></div>
-          </div>
-        </div> -->
-
-
       </div>
     </div>
   </div>
 </section>
 <section class="container-fluid py-5">
   <div class="container recipes-container" style="padding: 0; border-bottom: 2px solid #f2f2f2;">
-    <div class="row trending-content pt-5" style="padding: 0;">
+    <div class="row trending-content pt-0 m-0" style="padding: 0;">
       <div class="col-12 recipes-container-header">
         <h2 class="content-container-header-title font-weight-light" routerLink="/articles">
           Laatste artikels
         </h2>
-        <a class="content-container-header-more" routerLink="/articles">Nog meer artikels</a>
-      </div>      
-      <div *ngFor="let article of articles" class="col-6 col-sm-6 col-md-3 pb-5 px-2 content-container-card">
+        <a class="content-container-header-more d-none d-md-inline-block" routerLink="/articles">Nog meer artikels</a>
+      </div>
+      <!-- ARTICLES -->
+      <article-widget *ngFor="let article of articles" [article]="article" class="col-12 col-sm-6 col-md-3 pb-5 px-2 content-container-card"></article-widget>
+      
+      <!-- <div *ngFor="let article of articles" class="col-12 col-sm-6 col-md-3 pb-5 px-2 content-container-card">
         <div class="content-card m-1">
           <div class="content-card-image-container">
             <div [routerLink]="['/article', article._id]" class="content-card-image" [style.background-image]="'url(' + article?.files[0]?.source + ')'">
@@ -107,25 +90,31 @@
           </div>
           <div class="content-card-title content-card-title--article p-2">
             <a class="content-card-title-link" [routerLink]="['/article', article._id]">{{article.name}}</a>
-          </div>
-          <!-- <div class="content-card-author">
-            <div>Door: <span style="color: darkgrey;">{{article?.contributor[0]?.name}}</span></div>
-            <div><span style="color: darkgrey;">{{article?.contributor[0]?.title}}</span></div>
-          </div> -->
+          </div>          
         </div>
+      </div> -->
+    </div>
+    <div class="row justify-content-center mb-4">
+      <div class="col-12 text-center">
+        <button class="button" routerLink="/recipes" style="text-decoration: none; cursor: pointer;">Toon meer articels</button>
       </div>
     </div>
   </div>
 </section>
 <section class="container-fluid py-5">
-  <div class="container articles-container" style="padding: 0; border-bottom: 2px solid #f2f2f2;">
-    <div class="row trending-content pt-5" style="padding: 0;">
+  <div class="container articles-container" style="padding: 0;">
+    <div class="row trending-content pt-0 m-0" style="padding: 0;">
       <div class="col-12 recipes-container-header">
         <h2 class="content-container-header-title font-weight-light">Recepten</h2>
-        <a class="content-container-header-more" routerLink="/recipes" style="float: right; text-decoration: none;">Nog meer recepten</a>
+        <a class="content-container-header-more d-none d-md-inline-block" routerLink="/recipes" style="float: right; text-decoration: none;">Nog meer recepten</a>
       </div>     
       <!-- RECIPES  -->
-      <recipe-widget *ngFor="let recipe of recipes" class="col-6 col-sm-6 col-md-3 pb-5 px-2 content-container-card" [recipe]="recipe"></recipe-widget>
+      <recipe-widget *ngFor="let recipe of recipes" [recipe]="recipe" class="col-12 col-sm-6 col-md-3 pb-5 px-2 content-container-card"></recipe-widget>      
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-12 text-center">
+        <a class="button" routerLink="/recipes" style="text-decoration: none; cursor: pointer;">Toon meer recepten</a>
+      </div>
     </div>
   </div>
 </section>
